Package_Tools/include_C/include/SDL3/SDL_system.h


typedef bool ( *SDL_WindowsMessageHook)(void *userdata, MSG *msg);
extern  void  SDL_SetWindowsMessageHook(SDL_WindowsMessageHook callback, void *userdata);
extern  int  SDL_GetDirect3D9AdapterIndex(SDL_DisplayID displayID);
extern  bool  SDL_GetDXGIOutputInfo(SDL_DisplayID displayID, int *adapterIndex, int *outputIndex);
typedef bool ( *SDL_X11EventHook)(void *userdata, XEvent *xevent);
extern  void  SDL_SetX11EventHook(SDL_X11EventHook callback, void *userdata);
extern  bool  SDL_SetLinuxThreadPriority(Sint64 threadID, int priority);
extern  bool  SDL_SetLinuxThreadPriorityAndPolicy(Sint64 threadID, int sdlPriority, int schedPolicy);
typedef void ( *SDL_iOSAnimationCallback)(void *userdata);
extern  bool  SDL_SetiOSAnimationCallback(SDL_Window *window, int interval, SDL_iOSAnimationCallback callback, void *callbackParam);
extern  void  SDL_SetiOSEventPump(bool enabled);
extern  void *  SDL_GetAndroidJNIEnv(void);
extern  void *  SDL_GetAndroidActivity(void);
extern  int  SDL_GetAndroidSDKVersion(void);
extern  bool  SDL_IsChromebook(void);
extern  bool  SDL_IsDeXMode(void);
extern  void  SDL_SendAndroidBackButton(void);
#define SDL_ANDROID_EXTERNAL_STORAGE_READ   0x01
#define SDL_ANDROID_EXTERNAL_STORAGE_WRITE  0x02
extern  const char *  SDL_GetAndroidInternalStoragePath(void);
extern  Uint32  SDL_GetAndroidExternalStorageState(void);
extern  const char *  SDL_GetAndroidExternalStoragePath(void);
extern  const char *  SDL_GetAndroidCachePath(void);
typedef void ( *SDL_RequestAndroidPermissionCallback)(void *userdata, const char *permission, bool granted);
extern  bool  SDL_RequestAndroidPermission(const char *permission, SDL_RequestAndroidPermissionCallback cb, void *userdata);
extern  bool  SDL_ShowAndroidToast(const char *message, int duration, int gravity, int xoffset, int yoffset);
extern  bool  SDL_SendAndroidMessage(Uint32 command, int param);
extern  bool  SDL_IsTablet(void);
extern  bool  SDL_IsTV(void);
typedef enum SDL_Sandbox
{
    SDL_SANDBOX_NONE = 0,
    SDL_SANDBOX_UNKNOWN_CONTAINER,
    SDL_SANDBOX_FLATPAK,
    SDL_SANDBOX_SNAP,
    SDL_SANDBOX_MACOS
} SDL_Sandbox;
extern  SDL_Sandbox  SDL_GetSandbox(void);
extern  void  SDL_OnApplicationWillTerminate(void);
extern  void  SDL_OnApplicationDidReceiveMemoryWarning(void);
extern  void  SDL_OnApplicationWillEnterBackground(void);
extern  void  SDL_OnApplicationDidEnterBackground(void);
extern  void  SDL_OnApplicationWillEnterForeground(void);
extern  void  SDL_OnApplicationDidEnterForeground(void);
extern  void  SDL_OnApplicationDidChangeStatusBarOrientation(void);
typedef struct XTaskQueueObject *XTaskQueueHandle;
typedef struct XUser *XUserHandle;
extern  bool  SDL_GetGDKTaskQueue(XTaskQueueHandle *outTaskQueue);
extern  bool  SDL_GetGDKDefaultUser(XUserHandle *outUserHandle);